# Spock

./: .gitignore  .travis.yml  CNAME  LICENSE  MORE.md  README.md  README.md~  Spock.cabal  Spock.cabal~  _config.yml  blog.html  bump-version.sh  cabal.project  default.nix  figlet  hie.yaml  index.html  stack-ghcjs.yaml  stack-lts2.yaml  stack-travis.yaml  stack.yaml  tutorial.html  tutorial.md
.github/workflows/: haskell.yml
Spock/: LICENSE  README.md  Spock.cabal
Spock-api/: Spock-api.cabal
Spock-api-ghcjs/: Spock-api-ghcjs.cabal
Spock-api-ghcjs/src/Web/Spock/Api/: Client.hs
Spock-api-server/: Spock-api-server.cabal
Spock-api-server/src/Web/Spock/Api/: Server.hs
Spock-api/src/Web/Spock/: Api.hs
Spock-bench/: LICENSE  Spock-bench.cabal
Spock-bench/src/: Fn.hs  Main.hs  Scotty.hs  Servant.hs  Shared.hs  Snap.hs  Spock.hs
Spock-core/: LICENSE  README.md  Spock-core.cabal
Spock-core/src/Web/Spock/: Action.hs  Core.hs  Routing.hs
Spock-core/src/Web/Spock/Internal/: Config.hs  Cookies.hs  Core.hs  CoreAction.hs  Util.hs  Wire.hs
Spock-core/test/: Spec.hs
Spock-core/test/Web/Spock/: FrameworkSpecHelper.hs  SafeSpec.hs
Spock-core/test/Web/Spock/Internal/: CookiesSpec.hs  UtilSpec.hs
Spock/src/Web/: Spock.hs
Spock/src/Web/Spock/: Config.hs  SessionActions.hs
Spock/src/Web/Spock/Internal/: .#Core.hs  Core.hs  Monad.hs  SessionManager.hs  SessionVault.hs  Types.hs
Spock/test/: Spec.hs
Spock/test/Web/Spock/: CsrfSpec.hs  SafeSpec.hs  TestUtils.hs
Spock/test/Web/Spock/Internal/: SessionManagerSpec.hs  SessionVaultSpec.hs
Web/: Spock.hs
Web/Spock/: Cookie.hs  Monad.hs  SafeActions.hs  SessionManager.hs  StaticMiddleware.hs  Types.hs
_includes/: footer.html  head.html  header.html  hero.html
_layouts/: default.html  home.html
_posts/: 2015-04-19-type-safe_routing.markdown  2015-08-23-taking_authentication_to_the_next_level.markdown
css/: main.css  main.scss
docs/: _config.yml  blog.html  index.html  tutorial.md  tutorials.md
docs/_includes/: condensed_post.html  footer.html  header.html
docs/_layouts/: page.html  post.html
docs/_posts/: 2015-04-02-welcome-to-spock.markdown  2016-08-25-shareable-apis.markdown
docs/tutorials/: getting-started.md  rendering.md  rest-api.md  routing.md  testing.md
examples/: ATypesafe.hs  Simple.hs
examples/simple/: Main.hs
reroute/: .gitignore  .travis.yml  LICENSE  README.md  reroute.cabal
reroute/benchmarks/: Benchmarks.hs  README.md
reroute/src/Data/: PolyMap.hs
reroute/src/Web/Routing/: AbstractRouter.hs  Combinators.hs  Router.hs  SafeRouting.hs  TextRouting.hs
reroute/test/: Spec.hs
reroute/test/Web/Routing/: SafeRoutingSpec.hs  TextRoutingSpec.hs
scripts/: ci.sh  release.sh
src/: Tests.hs
src/Tests/: Routing.hs  Wire.hs
src/Web/: Spock.hs
src/Web/Spock/: Action.hs  Cookie.hs  Core.hs  Digestive.hs  Monad.hs  Routing.hs  Safe.hs  SafeActions.hs  SessionManager.hs  Shared.hs  Simple.hs  Types.hs  Util.hs  Wire.hs
src/Web/Spock/Internal/: AbstractRouter.hs  Cookies.hs  Core.hs  CoreAction.hs  Digestive.hs  Monad.hs  SafeRouting.hs  SessionManager.hs  SessionVault.hs  TextRouting.hs  Types.hs  Util.hs  Wire.hs  Wrapper.hs
src/Web/Spock/Specs/: All.hs  FrameworkSpecHelper.hs  SafeSpec.hs  SimpleSpec.hs  TextRoutingSpec.hs
test/: Spec.hs
test/Web/Spock/: FrameworkSpecHelper.hs  RoutingSpec.hs  SafeSpec.hs  SimpleSpec.hs  WireSpec.hs
test/Web/Spock/Internal/: CookiesSpec.hs  FrameworkSpecHelper.hs  SessionVaultSpec.hs  TextRoutingSpec.hs  WireSpec.hs
website/: _config.yml  index.html
website/_includes/: head.html  header.html
website/css/: syntax-highlighting.scss
