name:                Spock
version:             0.6.6.1
synopsis:            Another Haskell web framework for rapid development
description:         This toolbox provides everything you need to get a quick start into web hacking with haskell: routing, middleware, json, blaze, sessions, cookies, database helper, csrf-protection, global state
Homepage:            https://github.com/agrafix/Spock
Bug-reports:         https://github.com/agrafix/Spock/issues
license:             BSD3
author:              Alexander Thiemann <mail@agrafix.net>
maintainer:          mail@agrafix.net
copyright:           (c) 2013 - 2014 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Web.Spock,
                       Web.Spock.Routing,
                       Web.Spock.Wire
  other-modules:       Web.Spock.SessionManager,
                       Web.Spock.Monad,
                       Web.Spock.Types,
                       Web.Spock.SafeActions,
                       Web.Spock.Digestive,
                       Web.Spock.Util,
                       Web.Spock.Core
  build-depends:       aeson >= 0.6.2.1 && <0.9,
                       base >= 4 && < 5,
                       base64-bytestring ==1.*,
                       blaze-html ==0.7.*,
                       bytestring ==0.10.*,
                       case-insensitive >=1.1 && <1.3,
                       conduit >= 1.0 && <1.3,
                       containers ==0.5.*,
                       digestive-functors ==0.7.*,
                       directory ==1.2.*,
                       hashable ==1.2.*,
                       http-types ==0.8.*,
                       monad-control ==0.3.*,
                       mtl >=2.1 && <2.3,
                       old-locale ==1.*,
                       path-pieces >=0.1.4,
                       random ==1.*,
                       regex-compat ==0.95.*,
                       resource-pool ==0.2.*,
                       resourcet >= 0.4 && <1.2,
                       stm ==2.4.*,
                       text >= 0.11.3.1 && <1.3,
                       time >=1.4 && <1.6,
                       transformers >=0.3 && <0.5,
                       transformers-base ==0.4.*,
                       unordered-containers ==0.2.*,
                       vault ==0.3.*,
                       vector ==0.10.*,
                       wai >=3.0 && <4.0,
                       wai-extra >=3.0 && <4.0,
                       warp >=3.0 && <4.0,
                       xsd ==0.4.*
  ghc-options: -Wall -fno-warn-orphans

test-suite spocktests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Web.Spock.WireSpec, Web.Spock.RoutingSpec
  build-depends:       QuickCheck,
                       Spock,
                       base >= 4 && < 5,
                       hspec2 >=0.4 && <0.5,
                       vector ==0.10.*,
                       unordered-containers ==0.2.*
  ghc-options: -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: git://github.com/agrafix/Spock.git
