name:                Spock
version:             0.7.8.0
synopsis:            Another Haskell web framework for rapid development
description:         This toolbox provides everything you need to get a quick start into web hacking with haskell: fast routing, middleware, json, sessions, cookies, database helper, csrf-protection
Homepage:            https://github.com/agrafix/Spock
Bug-reports:         https://github.com/agrafix/Spock/issues
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2013 - 2015 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.6.3, GHC==7.8.3, GHC==7.10.1

library
  hs-source-dirs:      src
  exposed-modules:
                       Web.Spock.Internal.Util,
                       Web.Spock.Safe,
                       Web.Spock.Shared,
                       Web.Spock.Simple
  other-modules:
                       Web.Spock.Internal.Core,
                       Web.Spock.Internal.CoreAction,
                       Web.Spock.Internal.Monad,
                       Web.Spock.Internal.SessionManager,
                       Web.Spock.Internal.Types,
                       Web.Spock.Internal.Wire
  build-depends:
                       aeson >= 0.6.2.1,
                       base >= 4 && < 5,
                       base64-bytestring >=1.0,
                       bytestring >=0.10,
                       case-insensitive >=1.1,
                       containers >=0.5,
                       directory >=1.2,
                       hashable >=1.2,
                       http-types >=0.8,
                       monad-control >=0.3,
                       mtl >=2.1,
                       old-locale >=1.0,
                       path-pieces >=0.1.4,
                       random >=1.0,
                       reroute >=0.2.2.1,
                       resource-pool >=0.2,
                       resourcet >= 0.4,
                       stm >=2.4,
                       text >= 0.11.3.1,
                       time >=1.4,
                       transformers >=0.3,
                       transformers-base >=0.4,
                       unordered-containers >=0.2,
                       vault >=0.3,
                       wai >=3.0,
                       wai-extra >=3.0,
                       warp >=3.0
  ghc-options: -auto-all -Wall -fno-warn-orphans

test-suite spocktests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
                       Web.Spock.FrameworkSpecHelper,
                       Web.Spock.Internal.UtilSpec,
                       Web.Spock.SafeSpec,
                       Web.Spock.SimpleSpec
  build-depends:
                       base,
                       hspec,
                       hspec-wai,
                       http-types,
                       Spock,
                       text,
                       wai

  ghc-options: -Wall -fno-warn-orphans

benchmark spock-simple-example
  type:                exitcode-stdio-1.0
  ghc-options:         -auto-all -Wall -O2
  hs-source-dirs:      examples/simple
  main-is:             Main.hs
  build-depends:
    base,
    Spock

source-repository head
  type:     git
  location: git://github.com/agrafix/Spock.git
