name:                Spock-api-ghcjs
version:             0.11.0.0
synopsis:            Another Haskell web framework for rapid development
description:         GHCJS client side wiring for Spock-api APIs
Homepage:            https://www.spock.li
Bug-reports:         https://github.com/agrafix/Spock/issues
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2013 - 2016 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Web.Spock.Api.Client
  build-depends:
                base >= 4 && < 5,
                ghcjs-base,
                aeson,
                bytestring,
                text,
                Spock-api,
                hvect >= 0.3.1
  ghc-options: -auto-all -Wall

source-repository head
  type:     git
  location: https://github.com/agrafix/Spock
