name:                Spock-api-server
version:             0.12.0.0
synopsis:            Another Haskell web framework for rapid development
description:         Server wiring for Spock-api APIs
Homepage:            https://www.spock.li
Bug-reports:         https://github.com/agrafix/Spock/issues
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2013 - 2017 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.10.2, GHC==8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Web.Spock.Api.Server
  build-depends:
                base >= 4 && < 5,
                Spock-core >= 0.11,
                Spock-api,
                hvect >= 0.3.1,
                mtl
  ghc-options: -auto-all -Wall

source-repository head
  type:     git
  location: https://github.com/agrafix/Spock
