name:                Spock-api-server
version:             0.14.0.0
synopsis:            Another Haskell web framework for rapid development
description:         Server wiring for Spock-api APIs
Homepage:            https://www.spock.li
Bug-reports:         https://github.com/agrafix/Spock/issues
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2013 - 2020 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=2.0
tested-with:         GHC==8.8.4

library
  hs-source-dirs:      src
  exposed-modules:     Web.Spock.Api.Server
  build-depends:
                base >= 4 && < 5,
                Spock-core >= 0.14,
                Spock-api,
                hvect >= 0.3.1,
                mtl
  ghc-options: -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/agrafix/Spock
