name:                Spock-api
version:             0.12.0.0
synopsis:            Another Haskell web framework for rapid development
description:         API definition DSL for Spock web framework
Homepage:            https://www.spock.li
Bug-reports:         https://github.com/agrafix/Spock/issues
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2013 - 2017 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.10.2, GHC==8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Web.Spock.Api
  build-depends:
                aeson >= 0.7,
                base >= 4 && < 5,
                reroute >= 0.3,
                hvect >= 0.3.1,
                deepseq
  ghc-options: -auto-all -Wall

source-repository head
  type:     git
  location: https://github.com/agrafix/Spock
