name:                Spock-core
version:             0.12.0.0
synopsis:            Another Haskell web framework for rapid development
description:         Barebones high performance type safe web framework
Homepage:            https://www.spock.li
Bug-reports:         https://github.com/agrafix/Spock/issues
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2013 - 2017 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.10.2, GHC==8.0.1

extra-source-files:
    README.md

library
  hs-source-dirs:      src
  exposed-modules:
                       Web.Spock.Core,
                       Web.Spock.Action,
                       Web.Spock.Routing,
                       Web.Spock.Internal.Cookies,
                       Web.Spock.Internal.Util
  other-modules:
                       Web.Spock.Internal.Config,
                       Web.Spock.Internal.CoreAction,
                       Web.Spock.Internal.Wire
  build-depends:
                       aeson >= 0.7,
                       base >= 4 && < 5,
                       base64-bytestring >=1.0,
                       bytestring >=0.10,
                       case-insensitive >=1.1,
                       containers >=0.5,
                       cookie >=0.4,
                       directory >=1.2,
                       hashable >=1.2,
                       http-types >=0.8,
                       hvect >= 0.4,
                       mtl >=2.1,
                       http-api-data >= 0.2,
                       old-locale >=1.0,
                       reroute >=0.3.1,
                       resourcet >= 0.4,
                       stm >=2.4,
                       superbuffer >= 0.2,
                       text >= 0.11.3.1,
                       time >=1.4,
                       transformers >=0.3,
                       unordered-containers >=0.2,
                       vault >=0.3,
                       wai >=3.0,
                       wai-extra >=3.0,
                       warp >=3.0
  ghc-options: -auto-all -Wall -fno-warn-orphans

test-suite spockcoretests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
                       Web.Spock.FrameworkSpecHelper,
                       Web.Spock.Internal.CookiesSpec,
                       Web.Spock.Internal.UtilSpec,
                       Web.Spock.SafeSpec
  build-depends:
                       aeson,
                       base,
                       bytestring,
                       base64-bytestring >=1.0,
                       hspec >= 2.0,
                       hspec-wai >= 0.6,
                       http-types,
                       Spock-core,
                       reroute,
                       text,
                       time,
                       transformers >=0.3,
                       unordered-containers,
                       wai

  ghc-options: -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: https://github.com/agrafix/Spock
