name:                Spock
version:             0.13.0.0
synopsis:            Another Haskell web framework for rapid development
description:         This toolbox provides everything you need to get a quick start into web hacking with haskell:
                     .
                     * fast routing
                     .
                     * middleware
                     .
                     * json
                     .
                     * sessions
                     .
                     * cookies
                     .
                     * database helper
                     .
                     * csrf-protection
                     .
                     A tutorial is available at <http://www.spock.li/tutorial/ spock.li>
Homepage:            https://www.spock.li
Bug-reports:         https://github.com/agrafix/Spock/issues
license:             BSD3
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2013 - 2017 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC==7.10.2, GHC==8.0.1

extra-source-files:
    README.md

library
  hs-source-dirs:      src
  exposed-modules:
                  Web.Spock,
                  Web.Spock.Config,
                  Web.Spock.SessionActions,
                  Web.Spock.Internal.SessionVault,
                  Web.Spock.Internal.SessionManager
  other-modules:
                Web.Spock.Internal.Monad,
                Web.Spock.Internal.Types
  build-depends:
                       Spock-core >= 0.13,
                       base >= 4 && < 5,
                       base64-bytestring >=1.0,
                       bytestring >=0.10,
                       containers >=0.5,
                       cryptonite >= 0.6,
                       focus >=0.1,
                       hashable >=1.2,
                       hvect >=0.3,
                       http-types >=0.8,
                       list-t >=0.4,
                       monad-control >=1.0,
                       mtl >=2.1,
                       reroute >=0.5,
                       resource-pool >=0.2,
                       resourcet >= 0.4,
                       stm >=2.4,
                       stm-containers >=0.2,
                       text >= 0.11.3.1,
                       time >=1.4,
                       transformers >=0.3,
                       transformers-base >=0.4,
                       unordered-containers >=0.2,
                       vault >=0.3,
                       wai >=3.0
  ghc-options: -Wall -fno-warn-orphans

test-suite spocktests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
                Web.Spock.Internal.SessionVaultSpec,
                Web.Spock.Internal.SessionManagerSpec,
                Web.Spock.SafeSpec,
                Web.Spock.CsrfSpec,
                Web.Spock.TestUtils
  build-depends:
                       base,
                       bytestring,
                       hspec >= 2.0,
                       hspec-wai >= 0.6,
                       Spock,
                       Spock-core,
                       stm,
                       text,
                       time,
                       unordered-containers,
                       vault,
                       wai,
                       wai-extra

  ghc-options: -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: https://github.com/agrafix/Spock
