name:                reroute
version:             0.7.0.0
synopsis:            abstract implementation of typed and untyped web routing
description:         abstraction over how urls with/without parameters are mapped to their corresponding handlers
homepage:            http://github.com/agrafix/Spock
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>, Tim Baumann <tim@timbaumann.info>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2014 - 2021 Alexander Thiemann <mail@athiemann.net>, Tim Baumann <tim@timbaumann.info>
category:            Web
build-type:          Simple
cabal-version:       2.0
tested-with:         GHC==8.8.4, GHC==9.2.2

extra-source-files:
    README.md

library
  exposed-modules:
                  Data.PolyMap,
                  Web.Routing.Router,
                  Web.Routing.SafeRouting,
                  Web.Routing.Combinators
  build-depends:
                       base >=4.7 && <5,
                       deepseq >= 1.1.0.2,
                       hashable >=1.2,
                       mtl >=2.1,
                       http-api-data >=0.2,
                       text >= 0.11.3.1,
                       unordered-containers >=0.2,
                       hvect >=0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -fno-warn-orphans


test-suite reroute-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
                       Web.Routing.SafeRoutingSpec
  build-depends:
                base,
                hspec,
                mtl,
                reroute,
                text,
                unordered-containers,
                vector,
                hvect
  default-language:    Haskell2010
  ghc-options: -Wall -fno-warn-orphans

benchmark reroute-benchmarks
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall -O2
  hs-source-dirs:   benchmarks
  default-language: Haskell2010
  main-is:          Benchmarks.hs
  build-depends:
    base,
    criterion,
    text,
    mtl,
    unordered-containers,
    vector,
    hashable,
    regex-compat,
    random,
    deepseq,
    http-api-data,
    graph-core,
    hvect,
    reroute

source-repository head
  type:     git
  location: git://github.com/agrafix/Spock.git
